--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+server.port=8080
 
+spring.datasource.username=root
+spring.datasource.password=zhao1042409736
+spring.datasource.url=jdbc:mysql://39.100.196.166:3306/healthrecords?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=UTC
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.session.store-type =jdbc
+spring.session.jdbc.initialize-schema =always
+
+mybatis.mapper-locations=classpath:mapping/*Mapper.xml
