--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,9 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.session.store-type =jdbc
 spring.session.jdbc.initialize-schema =always
 
+mybatis.config=classpath:mybatis-config.xml
 mybatis.mapper-locations=classpath:mapping/*Mapper.xml
+
 
 spring.redis.host=39.100.196.166
 spring.redis.port=6379
@@ -24,3 +26,10 @@ spring.redis.lettuce.pool.max-wait=-1
 spring.redis.lettuce.pool.max-idle=8
 # 连接池中的最小空闲连接 默认 0
 spring.redis.lettuce.pool.min-idle=0
+
+
+#pagehelper分页插件配置
+pagehelper.helperDialect=postgresql
+pagehelper.reasonable=true
+pagehelper.supportMethodsArguments=true
+pagehelper.params=count=countSql  
