--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,12 @@
             <version>2.9.6</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper-spring-boot-starter</artifactId>
+            <version>1.2.3</version>
+        </dependency>
+
 
     </dependencies>
 
